--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --push https://madhav-pani:$HF_TOKEN@huggingface.co/spaces/madhav-pani/The_Subscription_Seer main
+        run: git push --force https://madhav-pani:$HF_TOKEN@huggingface.co/spaces/madhav-pani/The_Subscription_Seer main
